Employees/static/emphome.css
@import url(https://fonts.googleapis.com/css?family=Lato);

#nav ul {
    transform: translateY(30vh);
}

#top-section, #second-section, #third-section, #bottom-section {
    margin-bottom: 35px;
}

label.readonly {
    color: #000000;
}

input:not(:read-only):hover {
    border-bottom: 1px solid #000000;
}

input:not(:read-only):hover {
    border-bottom: 1px solid #000000;
}

input:read-only {
    border-bottom: 1px solid #000000 !important;
}

input:read-only:hover {
    cursor: default;
}

#add-button, #calculate-tips, #form-submit {
    background: transparent;
    border: 1px solid black;
}

/* MEDIA QUERIES */
@media only screen and (min-width: 0) {
    .s5ths {
        width: 20%;
    }
}

/*
#outer-wrapper{
    display: grid;
    grid-template-rows: 4fr 9fr .5fr 4fr;
    background-color: rgba(226, 161, 87, 0.116);
    margin:5%;
}
#top-section{
    display: grid;
    grid-template-columns: 25% 25% 25% 25% ;
    text-align: center;
    padding:2%;
}
#top-section div *{
    padding:2%;
    margin-top:2%;
}
#middle-section{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    column-gap: 1%;
    text-align: center;
    margin:0 2%;
}
#bottom-section {
    text-align: center;
}
#bottom-section *{
    margin-left:1%;
    padding: .5vw 0
}
#middle-section div{
    background-color: rgba(112, 81, 46, 0.126);
}
#names input{
    margin-top:5%;
}
#middle-section input, #top-section input, #middle-section select{
    width: 10vw;
}
.labels {
    font-family: Lato;
    font-size: 1.2vw;
}
#bottom-section input, #bottom-section select{
    width: 7vw;
}
#add-div #add-button{
    padding:10vw;
}

